--- a/index.html
+++ b/index.html
@@ -1,8 +1,92 @@
-<p>Hello 大家好</p>
-<p>我是willpat，这是我的个人网站。 </p>
-<p>很高兴你来到这里, 你可以在以下的网站找到我</p>
+<!DOCTYPE HTML>
+<style>#full { display: none; }</style>
+<html lang="en">
+  
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <title>Yang Liu</title>
+    <meta name="author" content="Yang Liu">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="stylesheet.css"></head>
+  
+  <body>
+    <table style="width:100%;max-width:850px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+      <tbody>
+        <tr style="padding:0px">
+          <td style="padding:0px">
+            <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+              <tbody>
+                <tr style="padding:0px">
+                  <td style="padding:2.5%;width:60%;vertical-align:middle">
+                    <p style="text-align:center">
+                      <name>Yang Liu | 刘洋</name>
+                      <p style="text-align:center">
+                        <a href="mailto:yangliu1213@hust.edu.cn">Email</a>&nbsp/&nbsp
+                        <a href="https://willpat1213.github.io/">CV</a>&nbsp/&nbsp
+                        <a href="https://willpat1213.github.io/">Google Scholar</a>&nbsp/&nbsp
+                        <a href="https://github.com/willpat1213">Github</a>&nbsp/&nbsp</p></td>
+                  <td style="padding:3%;width:40%;max-width:40%">
+                    <img style="width:70%;max-width:70%" alt="profile photo" src="images/graduate.jpg" class="hoverZoomLink"></td>
+                </tr>
+              </tbody>
+            </table>
+            <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+              <tbody>
+                <tr>
+                  <td style="padding:20px;width:100%;vertical-align:middle">
+                    <p>
+                      <heading>Selected Publications</heading></p>
+                    <p>*Equal contribution &nbsp;&nbsp;
+                      <sup>†</sup>Project leader</p></td>
+                </tr>
+              </tbody>
+            </table>
+            <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+              <tbody>
+                <tr>
+                  <td style="padding:20px;width:30%;max-width:30%" align="center">
+                    <img style="width:100%;max-width:100%" src="images/ReconX.png" alt="dise"></td>
+                  <td width="75%" valign="center">
+                    <papertitle>PDF-WuKong: A Large Multimodal Model for Efficient Long PDF Reading with End-to-End Sparse Sampling</papertitle>
+                    <br>
+                    <a href="https://github.com/xdxie">Xudong Xie*</a>,
+                    <a href="https://github.com/yingift">Liang Yin*</a>,
+                    <a href="https://github.com/yh-hust">Hao Yan*</a>,
+                    </strong>Yang Liu*</strong>,
+                    <a href="https://github.com/HaileyFamo">Jing Ding Ye</a>,
+                    Minghui Liao,
+                    <a href="https://github.com/Yuliang-Liu">Yuliang Liu*</a>,
+                    Wei Chen,
+                    Xiang Bai
+                    <br>
+                    <em>Arxiv, 2024</em>
+                    <br>
+                    <a href="https://arxiv.org/abs/2410.05970">[arXiv]</a>
+                    <a href="https://github.com/yh-hust/PDF-Wukong">[Code]</a>
+                    <a href="https://liuff19.github.io/PDF-Wukong/">[Project Page]</a>
+                    <br>
+                    <p>In this paper, we propose PDF-Wukong, A Large Multimodal Model for Efficient Long PDF Reading with End-to-End Sparse Sampling.</p>
+                  </td>
+                </tr>
+                <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+                  <tbody>
+                    <tr>
+                      <td style="padding:0px">
+                        <br>
+                        <p style="text-align:right;font-size:small;">
+                          <a href="https://jonbarron.info/">Website Template</a></p>
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+          </td>
+        </tr>
+        </table>
+        <p>
+          <center>
+            <div id="clustrmaps-widget" style="width:5%">
+              <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=B_hoqUcZkAVteexiuKv_tIvNw9enA1g2tIC3ypxXP2E"></script>
+              <br>&copy; Yang Liu | Last updated: 12 Oct, 2024</center></p>
+  </body>
 
-<ul>
-  <li> <a href="https://www.zhihu.com/people/blleagles">知乎</a> </li>
-  <li> <a href="https://space.bilibili.com/357409529">B站</a> </li>
-</ul>
+</html>
