--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               <tbody>
                 <tr>
                   <td style="padding:20px;width:30%;max-width:30%" align="center">
-                    <img style="width:100%;max-width:100%" src="images/ReconX.png" alt="dise"></td>
+                    <img style="width:100%;max-width:100%" src="images/PDF-Wukong.png" alt="dise"></td>
                   <td width="75%" valign="center">
                     <papertitle>PDF-WuKong: A Large Multimodal Model for Efficient Long PDF Reading with End-to-End Sparse Sampling</papertitle>
                     <br>
@@ -53,9 +53,9 @@
                     <a href="https://github.com/yingift">Liang Yin*</a>,
                     <a href="https://github.com/yh-hust">Hao Yan*</a>,
                     </strong>Yang Liu*</strong>,
-                    <a href="https://github.com/HaileyFamo">Jing Ding Ye</a>,
+                    <a href="https://github.com/HaileyFamo">Jing Ding</a>,
                     Minghui Liao,
-                    <a href="https://github.com/Yuliang-Liu">Yuliang Liu*</a>,
+                    <a href="https://github.com/Yuliang-Liu">Yuliang Liu</a>,
                     Wei Chen,
                     Xiang Bai
                     <br>
