--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               <tbody>
                 <tr>
                   <td style="padding:20px;width:30%;max-width:30%" align="center">
-                    <img style="width:100%;max-width:100%" src="images/PDF-Wukong.png" alt="dise"></td>
+                    <img style="width:100%;max-width:100%" src="images/PDF-Wukong.jpg" alt="dise"></td>
                   <td width="75%" valign="center">
                     <papertitle>PDF-WuKong: A Large Multimodal Model for Efficient Long PDF Reading with End-to-End Sparse Sampling</papertitle>
                     <br>
@@ -85,7 +85,7 @@
         <p>
           <center>
             <div id="clustrmaps-widget" style="width:5%">
-              <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=B_hoqUcZkAVteexiuKv_tIvNw9enA1g2tIC3ypxXP2E"></script>
+              <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=vdVOERkWLCZ1YbgBzWFvy_LwweDqQ4poDERBS5mYPZU&cl=ffffff&w=a"></script>
               <br>&copy; Yang Liu | Last updated: 12 Oct, 2024</center></p>
   </body>
 
