--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <a href="https://willpat1213.github.io/">Google Scholar</a>&nbsp/&nbsp
                         <a href="https://github.com/willpat1213">Github</a>&nbsp/&nbsp</p></td>
                   <td style="padding:3%;width:40%;max-width:40%">
-                    <img style="width:70%;max-width:70%" alt="profile photo" src="images/graduate.jpg" class="hoverZoomLink"></td>
+                    <img style="width:70%;max-width:70%" alt="profile photo" src="images/me.jpg" class="hoverZoomLink"></td>
                 </tr>
               </tbody>
             </table>
