--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <p>
           <center>
             <div id="clustrmaps-widget" style="width:5%">
-              <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=vdVOERkWLCZ1YbgBzWFvy_LwweDqQ4poDERBS5mYPZU&cl=ffffff&w=a"></script>
+              <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=vdVOERkWLCZ1YbgBzWFvy_LwweDqQ4poDERBS5mYPZU"></script>
               <br>&copy; Yang Liu | Last updated: 12 Oct, 2024</center></p>
   </body>
 
