--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <br>
                     <a href="https://arxiv.org/abs/2410.05970">[arXiv]</a>
                     <a href="https://github.com/yh-hust/PDF-Wukong">[Code]</a>
-                    <a href="https://liuff19.github.io/PDF-Wukong/">[Project Page]</a>
+                    <a href="https://willpat1213.github.io/PDF-Wukong/">[Project Page]</a>
                     <br>
                     <p>In this paper, we propose PDF-Wukong, A Large Multimodal Model for Efficient Long PDF Reading with End-to-End Sparse Sampling.</p>
                   </td>
