--- a/PDF-Wukong/index.html
+++ b/PDF-Wukong/index.html
@@ -63,23 +63,23 @@
             <h1 class="title is-1 publication-title">PDF-WuKong: A Large Multimodal Model for Efficient Long PDF Reading with End-to-End Sparse Sampling</h1>
             <div class="is-size-5 publication-authors">
               <span class="author-block">
-                <a href="https://liuff19.github.io/">Xudong Xie</a><sup>1</sup><sup>*</sup>,</span>
+                <a href="https://github.com/xdxie">Xudong Xie</a><sup>1</sup><sup>*</sup>,</span>
               <span class="author-block">
-                <a href="https://github.com/wenqsun">Liang Yin</a><sup>1</sup><sup>*</sup>,</span>
+                <a href="https://github.com/yingift">Liang Yin</a><sup>1</sup><sup>*</sup>,</span>
               <span class="author-block">
-                <a href="https://hanyang-21.github.io/">Hao Yan</a><sup>1</sup><sup>*</sup>,</span>
+                <a href="https://github.com/Yuliang-Liu">Hao Yan</a><sup>1</sup><sup>*</sup>,</span>
               <span class="author-block">
-                <a href="https://hanyang-21.github.io/">Yang Liu</a><sup>1</sup><sup>*</sup>,</span>
+                <a href="https://github.com/willpat1213">Yang Liu</a><sup>1</sup><sup>*</sup>,</span>
               <span class="author-block">
-                <a href="https://yikaiw.github.io/">Jing Ding</a><sup>1</sup>,</span>
+                <a href="https://github.com/HaileyFamo">Jing Ding</a><sup>1</sup>,</span>
               <span class="author-block">
-                <a href="https://github.com/sunboy0617">Minghui Liao</a><sup>2</sup>,</span><br>
+                <a href="https://scholar.google.com/citations?user=a4uTLbMAAAAJ&hl=zh-CN&oi=ao">Minghui Liao</a><sup>2</sup>,</span><br>
               <span class="author-block">
-                <a href="https://jamesyjl.github.io/">Yuliang Liu</a><sup>1</sup>,</span>
+                <a href="https://github.com/Yuliang-Liu">Yuliang Liu</a><sup>1</sup>,</span>
               <span class="author-block">
-                <a href="https://eejzhang.people.ust.hk/home.html">Wei Chen</a><sup>1</sup>,</span>
+                Wei Chen
               <span class="author-block">
-                <a href="https://duanyueqi.github.io/">Xiang Bai</a><sup>1</sup></span>
+                <a href="https://scholar.google.com/citations?user=UeltiQ4AAAAJ&hl=zh-CN">Xiang Bai</a><sup>1</sup></span>
           </div>
 
           <!-- affiliations -->
@@ -166,7 +166,8 @@
         <div class="column is-full-width">
           <h2 class="title is-3">Abstract</h2>
           <div class="content has-text-justified">
-            <img src="./static/images/abstract.jpg">
+            <img src="./static/images/abstract.jpg" style="width:1000px; margin-bottom:0px;"
+                   alt="Teaser."/>
             <p>
               Document understanding is a challenging task to process and comprehend large amounts of textual and visual information. 
               Recent advances in Large Language Models (LLMs) have significantly improved the performance of this task. 
@@ -189,7 +190,6 @@
     </div>
     </div>
   </section>
-
 
   <section class="section">
     <div class="container is-max-desktop">
