--- a/PDF-Wukong/index.html
+++ b/PDF-Wukong/index.html
@@ -67,7 +67,7 @@
               <span class="author-block">
                 <a href="https://github.com/yingift">Liang Yin</a><sup>1</sup><sup>*</sup>,</span>
               <span class="author-block">
-                <a href="https://github.com/Yuliang-Liu">Hao Yan</a><sup>1</sup><sup>*</sup>,</span>
+                <a href="https://github.com/yh-hust">Hao Yan</a><sup>1</sup><sup>*</sup>,</span>
               <span class="author-block">
                 <a href="https://github.com/willpat1213">Yang Liu</a><sup>1</sup><sup>*</sup>,</span>
               <span class="author-block">
@@ -77,7 +77,7 @@
               <span class="author-block">
                 <a href="https://github.com/Yuliang-Liu">Yuliang Liu</a><sup>1</sup>,</span>
               <span class="author-block">
-                Wei Chen
+                Wei Chen,
               <span class="author-block">
                 <a href="https://scholar.google.com/citations?user=UeltiQ4AAAAJ&hl=zh-CN">Xiang Bai</a><sup>1</sup></span>
           </div>
@@ -163,7 +163,7 @@
     <div class="container is-max-desktop">
       <!-- Abstract. -->
       <div class="columns is-centered has-text-centered">
-        <div class="column is-full-width">
+        <div class="column is-four-fifths">
           <h2 class="title is-3">Abstract</h2>
           <div class="content has-text-justified">
             <img src="./static/images/abstract.jpg" style="width:1000px; margin-bottom:0px;"
