--- a/PDF-Wukong/index.html
+++ b/PDF-Wukong/index.html
@@ -77,7 +77,7 @@
               <span class="author-block">
                 <a href="https://github.com/Yuliang-Liu">Yuliang Liu</a><sup>1</sup>,</span>
               <span class="author-block">
-                Wei Chen,
+                <a href="https://openreview.net/profile?id=~Wei_Chen28">Yuliang Liu</a><sup>1</sup>,</span>
               <span class="author-block">
                 <a href="https://scholar.google.com/citations?user=UeltiQ4AAAAJ&hl=zh-CN">Xiang Bai</a><sup>1</sup></span>
           </div>
@@ -196,7 +196,7 @@
       <!-- Concurrent Work. -->
       <div class="columns is-centered has-text-centered">
         <div class="column is-full-width">
-          <h2 class="title is-3">Method Overview</h2>
+          <h2 class="title is-3">Method</h2>
           <div class="content has-text-justified">
             <img src="./static/images/method.jpg">
 
@@ -215,7 +215,7 @@
   </section>
 
 
-<!--   <section class="section" id="BibTeX">
+  <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
       <pre><code>@misc{xie2024pdfwukong,
@@ -228,7 +228,7 @@
         url={https://arxiv.org/abs/2410.05970},
       }</code></pre>
     </div>
-  </section> -->
+  </section>
   
 
   <!-- TODO: update the arxiv link and github -->
