--- a/PDF-Wukong/index.html
+++ b/PDF-Wukong/index.html
@@ -63,7 +63,7 @@
             <h1 class="title is-1 publication-title">PDF-WuKong: A Large Multimodal Model for Efficient Long PDF Reading with End-to-End Sparse Sampling</h1>
             <div class="is-size-5 publication-authors">
               <span class="author-block">
-                <a href="https://github.com/xdxie">Xudong Xie</a><sup>1</sup><sup>*</sup>,</span>
+                <a href="https://scholar.google.com/citations?user=jTrfuH8AAAAJ&hl=zh-CN&oi=ao">Xudong Xie</a><sup>1</sup><sup>*</sup>,</span>
               <span class="author-block">
                 <a href="https://github.com/yingift">Liang Yin</a><sup>1</sup><sup>*</sup>,</span>
               <span class="author-block">
