--- a/PDF-Wukong/index.html
+++ b/PDF-Wukong/index.html
@@ -166,7 +166,7 @@
         <div class="column is-four-fifths">
           <h2 class="title is-3">Abstract</h2>
           <div class="content has-text-justified">
-            <img src="./static/images/abstract.jpg" style="width:1000px; margin-bottom:0px;"
+            <img src="./static/images/abstract.png" style="width:1000px; margin-bottom:0px;"
                    alt="Teaser."/>
             <p>
               Document understanding is a challenging task to process and comprehend large amounts of textual and visual information. 
