--- a/PDF-Wukong/index.html
+++ b/PDF-Wukong/index.html
@@ -77,7 +77,7 @@
               <span class="author-block">
                 <a href="https://github.com/Yuliang-Liu">Yuliang Liu</a><sup>1</sup>,</span>
               <span class="author-block">
-                <a href="https://openreview.net/profile?id=~Wei_Chen28">Yuliang Liu</a><sup>1</sup>,</span>
+                <a href="https://openreview.net/profile?id=~Wei_Chen28">Wei Chen</a><sup>1</sup>,</span>
               <span class="author-block">
                 <a href="https://scholar.google.com/citations?user=UeltiQ4AAAAJ&hl=zh-CN">Xiang Bai</a><sup>1</sup></span>
           </div>
