--- a/index.html
+++ b/index.html
@@ -49,15 +49,15 @@
                   <td width="75%" valign="center">
                     <papertitle>PDF-WuKong: A Large Multimodal Model for Efficient Long PDF Reading with End-to-End Sparse Sampling</papertitle>
                     <br>
-                    <a href="https://github.com/xdxie">Xudong Xie*</a>,
+                    <a href="https://scholar.google.com/citations?user=jTrfuH8AAAAJ&hl=zh-CN&oi=ao">Xudong Xie*</a>,
                     <a href="https://github.com/yingift">Liang Yin*</a>,
                     <a href="https://github.com/yh-hust">Hao Yan*</a>,
                     </strong>Yang Liu*</strong>,
                     <a href="https://github.com/HaileyFamo">Jing Ding</a>,
-                    Minghui Liao,
+                    <a href="https://scholar.google.com/citations?user=a4uTLbMAAAAJ&hl=zh-CN&oi=ao">Minghui Liao</a>,
                     <a href="https://github.com/Yuliang-Liu">Yuliang Liu</a>,
-                    Wei Chen,
-                    Xiang Bai
+                    <a href="https://openreview.net/profile?id=~Wei_Chen28">Wei Chen</a>,
+                    <a href="https://scholar.google.com/citations?user=UeltiQ4AAAAJ&hl=zh-CN">Xiang Bai</a>
                     <br>
                     <em>Arxiv, 2024</em>
                     <br>
