--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                     <a href="https://github.com/HaileyFamo">Jing Ding</a>,
                     <a href="https://scholar.google.com/citations?user=a4uTLbMAAAAJ&hl=zh-CN&oi=ao">Minghui Liao</a>,
                     <a href="https://github.com/Yuliang-Liu">Yuliang Liu</a>,
-                    <a href="https://openreview.net/profile?id=~Wei_Chen28">Wei Chen</a>,
-                    <a href="https://scholar.google.com/citations?user=UeltiQ4AAAAJ&hl=zh-CN">Xiang Bai</a>
+                    <a href="https://openreview.net/profile?id=~Wei_Chen28">Wei Chen†</a>,
+                    <a href="https://scholar.google.com/citations?user=UeltiQ4AAAAJ&hl=zh-CN">Xiang Bai†</a>
                     <br>
                     <em>Arxiv, 2024</em>
                     <br>
