--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <p>
                       <heading>Selected Publications</heading></p>
                     <p>*Equal contribution &nbsp;&nbsp;
-                      <sup>†</sup>Project leader</p></td>
+                      <sup>†</sup>Corresponding author</p></td>
                 </tr>
               </tbody>
             </table>
