--- a/PDF-Wukong/index.html
+++ b/PDF-Wukong/index.html
@@ -77,9 +77,9 @@
               <span class="author-block">
                 <a href="https://github.com/Yuliang-Liu">Yuliang Liu</a><sup>1</sup>,</span>
               <span class="author-block">
-                <a href="https://openreview.net/profile?id=~Wei_Chen28">Wei Chen</a><sup>1<sup><sup>†</sup></sup>,</span>
+                <a href="https://openreview.net/profile?id=~Wei_Chen28">Wei Chen</a><sup>1</sup>,</span>
               <span class="author-block">
-                <a href="https://scholar.google.com/citations?user=UeltiQ4AAAAJ&hl=zh-CN">Xiang Bai</a><sup>1<sup><sup>†</sup></span>
+                <a href="https://scholar.google.com/citations?user=UeltiQ4AAAAJ&hl=zh-CN">Xiang Bai</a><sup>1</sup></span>
           </div>
 
           <!-- affiliations -->
@@ -88,7 +88,6 @@
             <sup>1</sup> Huazhong University of Science and Technology &nbsp;
             <sup>2</sup> Huawei Inc. <br>
             <sup>*</sup> Equal Contribution
-            <sup>†</sup> Corresponding author
             <!-- <span class="author-block"><sup>1</sup>The University of Texas at Austin</span>
             <span class="author-block"><sup>2</sup>Nvidia</span> <br>
             <span class="author-block"><sup>3</sup>Xiamen University</span> <br>
@@ -213,8 +212,19 @@
       <!--/ Concurrent Work. -->
 
     </div>
-  </section>
 
+<section class="section">
+  <div class="container is-max-desktop">
+    <!-- Example comparisons -->
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <h2 class="title is-3">Example comparisons</h2>
+        <div class="content has-text-justified">
+          <img src="./static/images/case.pdf">
+        </div>
+      </div>
+    </div>
+</section>
 
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
