--- a/PDF-Wukong/index.html
+++ b/PDF-Wukong/index.html
@@ -221,11 +221,29 @@
         <h2 class="title is-3">Example comparisons</h2>
         <div class="content has-text-justified">
           <img src="./static/images/case.pdf">
+          <embed src="./static/images/case.pdf" width="100%" height="100%">
         </div>
       </div>
     </div>
 </section>
 
+<section class="section">
+  <div class="container is-max-desktop">
+    <!-- Example comparisons -->
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <h2 class="title is-3">More Examples</h2>
+        <div class="content has-text-justified">
+          <embed src="./static/images/exp_1.pdf" width="100%" height="100%">
+          <embed src="./static/images/exp_2.pdf" width="100%" height="100%">
+          <embed src="./static/images/exp_3.pdf" width="100%" height="100%">
+          <embed src="./static/images/exp_4.pdf" width="100%" height="100%">
+          <embed src="./static/images/exp_5.pdf" width="100%" height="100%">
+        </div>
+      </div>
+    </div>
+</section>
+    
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
