--- a/PDF-Wukong/index.html
+++ b/PDF-Wukong/index.html
@@ -215,23 +215,25 @@
 
 <section class="section">
   <div class="container is-max-desktop">
-    <!-- Example comparisons -->
-    <div class="columns is-centered has-text-centered">
-      <div class="column is-four-fifths">
+    <!-- Abstract. -->
+    <div class="columns is-centered">
+      <div class="column is-full-width">
         <h2 class="title is-3">Example comparisons</h2>
         <div class="content has-text-justified">
-          <img src="./static/images/case.pdf">
           <embed src="./static/images/case.pdf" width="100%" height="100%">
         </div>
       </div>
     </div>
+    <!--/ Abstract. -->
+  </div>
+  </div>
 </section>
 
 <section class="section">
   <div class="container is-max-desktop">
-    <!-- Example comparisons -->
-    <div class="columns is-centered has-text-centered">
-      <div class="column is-four-fifths">
+    <!-- Abstract. -->
+    <div class="columns is-centered">
+      <div class="column is-full-width">
         <h2 class="title is-3">More Examples</h2>
         <div class="content has-text-justified">
           <embed src="./static/images/exp_1.pdf" width="100%" height="100%">
@@ -242,6 +244,9 @@
         </div>
       </div>
     </div>
+    <!--/ Abstract. -->
+  </div>
+  </div>
 </section>
     
   <section class="section" id="BibTeX">
