--- a/PDF-Wukong/index.html
+++ b/PDF-Wukong/index.html
@@ -221,7 +221,7 @@
       <div class="column is-full-width">
         <h2 class="title is-3">Example comparisons</h2>
         <div class="content has-text-justified">
-          <object data="./static/images/case.pdf" height="100%" width="100%"></object>
+          <img src="./static/images/case.jpg">
         </div>
       </div>
     </div>
@@ -236,17 +236,11 @@
     <div class="columns is-centered">
       <div class="column is-full-width">
         <h2 class="title is-3">More Examples</h2>
-<!--         <div class="content has-text-justified">
-          <embed src="./static/images/exp_1.pdf" width="100%" height="100%">
-          <embed src="./static/images/exp_2.pdf" width="100%" height="100%">
-          <embed src="./static/images/exp_3.pdf" width="100%" height="100%">
-          <embed src="./static/images/exp_4.pdf" width="100%" height="100%">
-          <embed src="./static/images/exp_5.pdf" width="100%" height="100%"> -->
-          <object data="./static/images/exp_1.pdf" height="100%" width="100%"></object>
-          <object data="./static/images/exp_2.pdf" height="100%" width="100%"></object>
-          <object data="./static/images/exp_3.pdf" height="100%" width="100%"></object>
-          <object data="./static/images/exp_4.pdf" height="100%" width="100%"></object>
-          <object data="./static/images/exp_5.pdf" height="100%" width="100%"></object>
+          <img src="./static/images/exp_1.jpg">
+          <img src="./static/images/exp_2.jpg">
+          <img src="./static/images/exp_3.jpg">
+          <img src="./static/images/exp_4.jpg">
+          <img src="./static/images/exp_5.jpg">
         </div>
       </div>
     </div>
