--- a/PDF-Wukong/index.html
+++ b/PDF-Wukong/index.html
@@ -181,7 +181,7 @@
               a dataset consisting of a broad collection of academic papers sourced from arXiv, multiple strategies are proposed 
               to generate automatically 1M QA pairs along with their corresponding evidence sources. Experimental results demonstrate 
               the superiority and high efficiency of our approach over other models on the task of long multimodal PDF understanding, 
-              surpassing proprietary products by an average of 8.6% on F1. Our code and dataset will be released at https://github.com/yh-hust/PDF-Wukong.
+              surpassing proprietary products by an average of 8.6% on F1. Our code and dataset will be released at <a href="https://github.com/yh-hust/PDF-Wukong">https://github.com/yh-hust/PDF-Wukong</a>.
             </p>
           </div>
         </div>
