--- a/PDF-Wukong/index.html
+++ b/PDF-Wukong/index.html
@@ -238,7 +238,7 @@ src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-
               Finally, we devise a set of rules to filter the generated training and testing sets automatically. 
               The removing rules for the samples include too-short questions, too-long answers, non-English text, etc. 
               Further manual checking is conducted on test set to ensure the reliability of the evaluation. 
-              PaperPDF consists of two types of QA pairs: <strong>Single-evidence</strong> and <strong>Multi-evidence</strong></p>
+              PaperPDF consists of two types of QA pairs: <strong>Single-evidence</strong> and <strong>Multi-evidence</strong>.</p>
           </div>
         </div>
       </div>
