--- a/PDF-Wukong/index.html
+++ b/PDF-Wukong/index.html
@@ -282,15 +282,13 @@ src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
-      <pre><code>@misc{xie2024pdfwukong,
-        title={PDF-WuKong: A Large Multimodal Model for Efficient Long PDF Reading with End-to-End Sparse Sampling}, 
-        author={Xudong Xie and Liang Yin and Hao Yan and Yang Liu and Jing Ding and Minghui Liao and Yuliang Liu and Wei Chen and Xiang Bai},
-        year={2024},
-        eprint={2410.05970},
-        archivePrefix={arXiv},
-        primaryClass={cs.CV},
+      <pre><code>@article{xie2024pdfwukong,
+        title={PDF-WuKong: A Large Multimodal Model for Efficient Long PDF Reading with End-to-End Sparse Sampling}, 
+        author={Xie, Xudong and Yin, Liang and Yan, Hao and Liu, Yang and Ding, Jing and Liao, Minghui and Liu, Yuliang and Chen, Wei and Bai, Xiang},
+        year={2024},
+        journal={arXiv preprint arXiv:2410.05970},
         url={https://arxiv.org/abs/2410.05970},
-      }</code></pre>
+      }</code></pre>
     </div>
   </section>
   
